# leetcode_helper

./: .env  .env.auth  .gitignore  Dockerfile  Dockerfile.auth  Dockerfile.info  README.md  _docker-compose.yaml  docker-compose-elastic.yaml  docker-compose.yaml  generate_keys.sh  requirements.auth.txt  requirements.info.txt  requirements.txt
app/: app.py  table.py
app/api_v1/users/: crud.py  endpoints.py  schemas.py  views.py
app/auth/: __init__.py  utils.py
app/core/: __init__.py  auth.py  config.py
app/core/models/: __init__.py  helper.py  user.py
auth_server/: app.py  pyproject.toml
auth_server/api_v1/users/: __init__.py  crud.py  dependencies.py  endpoints.py  schemas.py
auth_server/auth/: __init__.py  utils.py
auth_server/core/: config.py
auth_server/core/models/: __init__.py  helper.py  user.py
auth_server/tests/: conftest.py  test_auth.py
frontend/: package-lock.json
frontend/src/: App.vue
info_server/: app.py  pyproject.toml
info_server/api_v1/problems/: __init__.py  crud.py  dependencies.py  endpoints.py  schemas.py
info_server/api_v1/users_problems/: __init__.py  crud.py  endpoints.py  schemas.py
info_server/core/: __init__.py  config.py  database.py
info_server/core/models/: __init__.py  helper.py  problem.py  users_problem.py  users_solve.py
poetry_for_auth/: pyproject.toml
poetry_for_info/: pyproject.toml
problems_db_example/: init.sql
