[tool.poetry]
name = "poetry-for-info"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.13"
fastapi = "^0.109.2"
pydantic = "^2.6.1"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
exceptiongroup = "^1.2.0"
fastapi-pagination = "^0.12.16"
python-multipart = "^0.0.9"
motor = "^3.3.2"
beanie = "^1.25.0"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
